--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3><span>Age : </span> 22 Years old </h3>
                 <h3><span>Citizenship : </span> Filipino </h3>
                 <h3><span>Language : </span> English </h3>
-                <a href="#"><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
+                <a href="images/DEPOSITARIO_RHEY-MARC_RESUME.pdf" download=""><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
             </div>
 
             <div class="counter">
