--- a/index.html
+++ b/index.html
@@ -209,11 +209,10 @@
 
             </div>
 
-            <form action="">
-                <input type="text" placeholder="name" class="box">
-                <input type="email" placeholder="email" class="box">
-                <input type="text" placeholder="project" class="box">
-                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
+            <form method="POST" action="https://script.google.com/macros/s/AKfycbxnW2jlgzforWRNu0OOr3sw46qslhMXWwrzr0Mq8KVLk6Ndj3T89dSSci7C2CAUQdu1/exec">
+                <input type="text" placeholder="Name" class="box">
+                <input type="email" placeholder="Email" class="box">
+                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i></button>
             </form>
 
