fixed case issues

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
             </div>
 
             <form method="POST" action="https://script.google.com/macros/s/AKfycbxnW2jlgzforWRNu0OOr3sw46qslhMXWwrzr0Mq8KVLk6Ndj3T89dSSci7C2CAUQdu1/exec">
-                <input type="text" placeholder="Name" class="box">
-                <input type="email" placeholder="Email" class="box">
-                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
+                <input type="text" name="Name" placeholder="Name" class="box">
+                <input type="email" name="Email" placeholder="Email" class="box">
+                <textarea name="Message" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i></button>
             </form>
 
