--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
             <form method="POST" 
                 action="https://script.google.com/macros/s/AKfycbxnW2jlgzforWRNu0OOr3sw46qslhMXWwrzr0Mq8KVLk6Ndj3T89dSSci7C2CAUQdu1/exec"
                 >
-                <input name="name" type="text" placeholder="Name" class="box">
-                <input name="email" type="email" placeholder="Email" class="box">
-                <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
+                <input name="Name" type="text" placeholder="Name" class="box">
+                <input name="Email" type="email" placeholder="Email" class="box">
+                <textarea name="Message" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i></button>
             </form>
 
