--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 >
                 <input name="Name" type="text" placeholder="Name" class="box">
                 <input name="Email" type="email" placeholder="Email" class="box">
-<!--                 <textarea name="Message" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea> -->
+                <input name="Message" class="box message" placeholder="Message">
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i></button>
             </form>
 
