--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <form method="POST" 
                 action="https://script.google.com/macros/s/AKfycbxnW2jlgzforWRNu0OOr3sw46qslhMXWwrzr0Mq8KVLk6Ndj3T89dSSci7C2CAUQdu1/exec"
-                >
+                id="contact_form">
                 <input name="Name" type="text" placeholder="Name" class="box">
                 <input name="Email" type="email" placeholder="Email" class="box">
                 <textarea name="Message" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
