--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <h3>HI THERE !</h3>
         <h1>I'm <span>Rhey Marc</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde rem delectus dolore placeat deserunt alias, at fugiat quos, deleniti neque architecto consectetur enim. Qui molestias laudantium libero neque esse dolor?</p> 
+        <p>An ACLC College of Butuan Graduate with a Bachelor's Degree in Computer Science. I enjoy problem solving, and creating something from my ideas is something that excites me! I also enjoy reading, coding, watching films, and music.</p> 
         <a href="#about"><button class="btn">ABOUT ME <i class="fas fa-user"></i></button></a>
     </section>
 
@@ -69,7 +69,7 @@
 
                 <div class="box">
                     <span>1+</span>
-                    <h3>Years of Experience</h3>
+                    <h3>Year of Experience</h3>
                 </div>
 
                 <div class="box">
@@ -109,7 +109,7 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2023</span>
                 <h3>Bachelor of Science in Computer Science</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam omnis soluta maiores voluptates quaerat explicabo! Consequatur, odit! Voluptatem delectus enim placeat illum doloribus ipsum deserunt, fuga consectetur accusantium libero accusamus.</p>
+                <p>Published a thesis in Internation Journal of Advanced Computer Science and Applications. Created projects using python, C++, VB.Net, SQL, HTML, CSS, and JavaScript. Developed a short puzzle game using RPGMAKER MV.</p>
 
             </div>
 
@@ -118,7 +118,7 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2019</span>
                 <h3>TVL: Computer Systems Servicing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam omnis soluta maiores voluptates quaerat explicabo! Consequatur, odit! Voluptatem delectus enim placeat illum doloribus ipsum deserunt, fuga consectetur accusantium libero accusamus.</p>
+                <p>Learned Computer troubleshooting and networking. Earned NCII certification for Computer Systems Servicing.</p>
 
             </div>
 
@@ -127,7 +127,7 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2017</span>
                 <h3>TVL: Computer Systems Servicing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam omnis soluta maiores voluptates quaerat explicabo! Consequatur, odit! Voluptatem delectus enim placeat illum doloribus ipsum deserunt, fuga consectetur accusantium libero accusamus.</p>
+                <p>Learned Computer troubleshooting, networking, computing fundamentals, and basic web development.</p>
 
             </div>
 
@@ -209,7 +209,7 @@
 
             </div>
 
-            <form method="POST" action="https://script.google.com/macros/s/AKfycbxnW2jlgzforWRNu0OOr3sw46qslhMXWwrzr0Mq8KVLk6Ndj3T89dSSci7C2CAUQdu1/exec">
+            <form method="POST" action="https://script.google.com/macros/s/AKfycbzn0yVGA-mWiwClmmbuME6oF_v0RibNYY0hr6YdE1zzA2SclgBfTHNWzsti95tX48SSng/exec" id="my-form">
                 <input name="Name" type="text" placeholder="Name" class="box">
                 <input name="Email" type="email" placeholder="Email" class="box">
                 <textarea name="Message" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
